# novatus

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_provided.md  docker-compose.yml  pyproject.toml  requirements.txt  sqlplay.py
data/: customer_transactions.csv  gtr_report.csv
src/: api_demo.py  config.yaml  eligibility.py  generate_fake_tables.py  main.py  reconcile.py  report.py
src/novatus_api/: main.py
src/novatus_cli/: main.py
src/novatus_utils/: db.py  logging_utils.py  models.py  sockets_ports.py  sqlalchemy_utils.py
tests/: conftest.py  test_db.py  test_eligibility.py  test_modules.py  test_reconcile.py  test_sample_data.py
tests/test_db/: conftest.py  test_novatus_db.py
